@@ -1,10 +1,15 @@
-package com.example.PRM.serviceImpl;
+package com.example.PRM.CommunityPostServiceImplTest;
 
 import com.example.PRM.dto.request.community.CommunityPostReq;
 import com.example.PRM.dto.request.community.PostCommentReq;
 import com.example.PRM.dto.response.community.CommunityPostRes;
 import com.example.PRM.dto.response.community.PostCommentRes;
-import com.example.PRM.entity.*;
+import com.example.PRM.entity.CommunityPost;
+import com.example.PRM.entity.DonationEvent;
+import com.example.PRM.entity.PostComment;
+import com.example.PRM.entity.PostLike;
+import com.example.PRM.entity.Role;
+import com.example.PRM.entity.User;
 import com.example.PRM.event.PostInteractionNotificationEvent;
 import com.example.PRM.exception.ForbiddenException;
 import com.example.PRM.exception.NotFoundException;
@@ -13,7 +18,10 @@ import com.example.PRM.repository.DonationEventRepository;
 import com.example.PRM.repository.PostCommentRepository;
 import com.example.PRM.repository.PostLikeRepository;
 import com.example.PRM.repository.UserRepository;
+import com.example.PRM.serviceImpl.CommunityPostServiceImpl;
 import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.DisplayName;
+import org.junit.jupiter.api.Nested;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
@@ -25,609 +33,802 @@ import org.springframework.data.domain.PageImpl;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.security.core.userdetails.UserDetails;
 
-import java.time.OffsetDateTime;
-import java.util.Arrays;
-import java.util.Collections;
+import java.util.List;
 import java.util.Optional;
 import java.util.UUID;
 
 import static org.junit.jupiter.api.Assertions.*;
 import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.ArgumentMatchers.eq;
 import static org.mockito.Mockito.*;
 
+/**
+ * Unit tests for CommunityPostServiceImpl.
+ * Covers the full flow: create/update/delete/hide/unhide posts, list posts,
+ * toggle like (with notification branches), add comment (with notification
+ * branches for post author and parent-comment author), and list comments.
+ *
+ * NOTE: Field/method names on entities & DTOs are inferred from usage in
+ * CommunityPostServiceImpl. Adjust getters/setters/builders to match your
+ * actual classes if they differ.
+ */
 @ExtendWith(MockitoExtension.class)
 class CommunityPostServiceImplTest {
+
+    @Mock
+    private CommunityPostRepository communityPostRepository;
+
+    @Mock
+    private PostLikeRepository postLikeRepository;
+
+    @Mock
+    private PostCommentRepository postCommentRepository;
+
+    @Mock
+    private UserRepository userRepository;
+
+    @Mock
+    private ApplicationEventPublisher eventPublisher;
+
+    @Mock
+    private DonationEventRepository donationEventRepository;
+
+    @Mock
+    private UserDetails userDetails;
 
     @InjectMocks
     private CommunityPostServiceImpl communityPostService;
 
-    @Mock private CommunityPostRepository communityPostRepository;
-    @Mock private PostLikeRepository postLikeRepository;
-    @Mock private PostCommentRepository postCommentRepository;
-    @Mock private UserRepository userRepository;
-    @Mock private ApplicationEventPublisher eventPublisher;
-    @Mock private DonationEventRepository donationEventRepository;
-    @Mock private UserDetails userDetails;
-
-    private User user;
+    private User orgUser;
+    private User memberUser;
     private User adminUser;
-    private Role orgRole;
-    private Role userRole;
-    private Role adminRole;
     private CommunityPost post;
     private UUID postId;
-    private DonationEvent donationEvent;
     private UUID donationEventId;
+    private DonationEvent donationEvent;
+    private CommunityPostReq postReq;
 
     @BeforeEach
     void setUp() {
-        orgRole = new Role();
+        postId = UUID.randomUUID();
+        donationEventId = UUID.randomUUID();
+
+        Role orgRole = new Role();
         orgRole.setRoleName("ORGANIZATION");
 
-        userRole = new Role();
-        userRole.setRoleName("USER");
+        Role memberRole = new Role();
+        memberRole.setRoleName("MEMBER");
 
-        adminRole = new Role();
+        Role adminRole = new Role();
         adminRole.setRoleName("ADMIN");
 
-        user = new User();
-        user.setUserId(UUID.randomUUID());
-        user.setUserName("orgUser");
-        user.setRole(orgRole);
-        user.setFullName("Org User");
+        orgUser = new User();
+        orgUser.setUserId(UUID.randomUUID());
+        orgUser.setUserName("org_user");
+        orgUser.setFullName("Org User");
+        orgUser.setLogoUrl("https://example.com/org.png");
+        orgUser.setRole(orgRole);
+
+        memberUser = new User();
+        memberUser.setUserId(UUID.randomUUID());
+        memberUser.setUserName("member_user");
+        memberUser.setFullName("Member User");
+        memberUser.setLogoUrl("https://example.com/member.png");
+        memberUser.setRole(memberRole);
 
         adminUser = new User();
         adminUser.setUserId(UUID.randomUUID());
-        adminUser.setUserName("admin");
+        adminUser.setUserName("admin_user");
+        adminUser.setFullName("Admin User");
         adminUser.setRole(adminRole);
 
-        donationEventId = UUID.randomUUID();
+        post = new CommunityPost();
+        post.setId(UUID.randomUUID());
+        post.setUser(orgUser);
+        post.setContent("Hello community");
+        post.setHidden(false);
+
         donationEvent = new DonationEvent();
         donationEvent.setId(donationEventId);
-        donationEvent.setTitle("Event Title");
+        donationEvent.setTitle("Winter Donation Drive");
 
-        postId = UUID.randomUUID();
-        post = new CommunityPost();
-        post.setId(postId);
-        post.setUser(user);
-        post.setContent("Test content");
-        post.setImages(Arrays.asList("img1.jpg"));
-        post.setCreatedAt(OffsetDateTime.now());
-
-        lenient().when(userDetails.getUsername()).thenReturn("orgUser");
+        postReq = new CommunityPostReq();
+        postReq.setContent("Hello community");
+        postReq.setImages(List.of("img1.png"));
     }
 
-    // CREATE POST
-    @Test
-    void createPost_ShouldReturnPostRes_WhenUserIsOrganization() {
-        CommunityPostReq req = new CommunityPostReq();
-        req.setContent("New Content");
-        req.setDonationEventId(donationEventId);
+    // ------------------------------------------------------------------
+    // createPost
+    // ------------------------------------------------------------------
+    @Nested
+    @DisplayName("createPost")
+    class CreatePost {
 
-        when(userRepository.findByUserName("orgUser")).thenReturn(Optional.of(user));
-        when(donationEventRepository.findById(donationEventId)).thenReturn(Optional.of(donationEvent));
-        when(communityPostRepository.save(any(CommunityPost.class))).thenAnswer(i -> {
-            CommunityPost p = i.getArgument(0);
-            p.setId(UUID.randomUUID());
-            return p;
-        });
+        @Test
+        @DisplayName("Tạo bài viết thành công khi không gắn donation event")
+        void createSuccessWithoutDonationEvent() {
+            when(userDetails.getUsername()).thenReturn("org_user");
+            when(userRepository.findByUserName("org_user")).thenReturn(Optional.of(orgUser));
+            when(communityPostRepository.save(any(CommunityPost.class))).thenAnswer(inv -> inv.getArgument(0));
+            when(postLikeRepository.countByPost(any())).thenReturn(0L);
+            when(postCommentRepository.countByPost(any())).thenReturn(0L);
 
-        CommunityPostRes result = communityPostService.createPost(req, userDetails);
+            CommunityPostRes result = communityPostService.createPost(postReq, userDetails);
 
-        assertNotNull(result);
-        assertEquals(req.getContent(), result.getContent());
-        assertEquals(donationEventId, result.getDonationEventId());
-        verify(communityPostRepository, times(1)).save(any(CommunityPost.class));
+            assertNotNull(result);
+            assertEquals("Hello community", result.getContent());
+            assertNull(result.getDonationEventId());
+            verify(donationEventRepository, never()).findById(any());
+        }
+
+        @Test
+        @DisplayName("Tạo bài viết thành công khi có gắn donation event hợp lệ")
+        void createSuccessWithDonationEvent() {
+            postReq.setDonationEventId(donationEventId);
+            when(userDetails.getUsername()).thenReturn("org_user");
+            when(userRepository.findByUserName("org_user")).thenReturn(Optional.of(orgUser));
+            when(donationEventRepository.findById(donationEventId)).thenReturn(Optional.of(donationEvent));
+            when(communityPostRepository.save(any(CommunityPost.class))).thenAnswer(inv -> inv.getArgument(0));
+            when(postLikeRepository.countByPost(any())).thenReturn(0L);
+            when(postCommentRepository.countByPost(any())).thenReturn(0L);
+
+            CommunityPostRes result = communityPostService.createPost(postReq, userDetails);
+
+            assertNotNull(result);
+            assertEquals(donationEventId, result.getDonationEventId());
+            assertEquals("Winter Donation Drive", result.getDonationEventTitle());
+        }
+
+        @Test
+        @DisplayName("Ném lỗi khi donationEventId không tồn tại")
+        void createThrowsWhenDonationEventNotFound() {
+            postReq.setDonationEventId(donationEventId);
+            when(userDetails.getUsername()).thenReturn("org_user");
+            when(userRepository.findByUserName("org_user")).thenReturn(Optional.of(orgUser));
+            when(donationEventRepository.findById(donationEventId)).thenReturn(Optional.empty());
+
+            assertThrows(NotFoundException.class,
+                    () -> communityPostService.createPost(postReq, userDetails));
+            verify(communityPostRepository, never()).save(any());
+        }
+
+        @Test
+        @DisplayName("Ném lỗi khi user không có role ORGANIZATION")
+        void createThrowsWhenNotOrganizationRole() {
+            when(userDetails.getUsername()).thenReturn("member_user");
+            when(userRepository.findByUserName("member_user")).thenReturn(Optional.of(memberUser));
+
+            assertThrows(ForbiddenException.class,
+                    () -> communityPostService.createPost(postReq, userDetails));
+            verify(communityPostRepository, never()).save(any());
+        }
+
+        @Test
+        @DisplayName("Ném lỗi khi không tìm thấy user")
+        void createThrowsWhenUserNotFound() {
+            when(userDetails.getUsername()).thenReturn("ghost");
+            when(userRepository.findByUserName("ghost")).thenReturn(Optional.empty());
+
+            assertThrows(NotFoundException.class,
+                    () -> communityPostService.createPost(postReq, userDetails));
+        }
     }
 
-    @Test
-    void createPost_ShouldThrowNotFound_WhenUserNotFound() {
-        when(userRepository.findByUserName("orgUser")).thenReturn(Optional.empty());
-        assertThrows(NotFoundException.class, () -> communityPostService.createPost(new CommunityPostReq(), userDetails));
+    // ------------------------------------------------------------------
+    // updatePost
+    // ------------------------------------------------------------------
+    @Nested
+    @DisplayName("updatePost")
+    class UpdatePost {
+
+        @Test
+        @DisplayName("Cập nhật thành công khi là chủ bài viết, gắn donation event mới")
+        void updateSuccessWithDonationEvent() {
+            CommunityPostReq updateReq = new CommunityPostReq();
+            updateReq.setContent("Updated content");
+            updateReq.setImages(List.of("new.png"));
+            updateReq.setDonationEventId(donationEventId);
+
+            when(userDetails.getUsername()).thenReturn("org_user");
+            when(userRepository.findByUserName("org_user")).thenReturn(Optional.of(orgUser));
+            when(communityPostRepository.findById(postId)).thenReturn(Optional.of(post));
+            when(donationEventRepository.findById(donationEventId)).thenReturn(Optional.of(donationEvent));
+            when(communityPostRepository.save(post)).thenReturn(post);
+            when(postLikeRepository.countByPost(post)).thenReturn(0L);
+            when(postCommentRepository.countByPost(post)).thenReturn(0L);
+
+            CommunityPostRes result = communityPostService.updatePost(postId, updateReq, userDetails);
+
+            assertNotNull(result);
+            assertEquals("Updated content", post.getContent());
+            assertEquals(donationEvent, post.getDonationEvent());
+        }
+
+        @Test
+        @DisplayName("Gỡ donation event khi donationEventId là null")
+        void updateRemovesDonationEventWhenNull() {
+            post.setDonationEvent(donationEvent);
+            CommunityPostReq updateReq = new CommunityPostReq();
+            updateReq.setContent("Updated content");
+
+            when(userDetails.getUsername()).thenReturn("org_user");
+            when(userRepository.findByUserName("org_user")).thenReturn(Optional.of(orgUser));
+            when(communityPostRepository.findById(postId)).thenReturn(Optional.of(post));
+            when(communityPostRepository.save(post)).thenReturn(post);
+            when(postLikeRepository.countByPost(post)).thenReturn(0L);
+            when(postCommentRepository.countByPost(post)).thenReturn(0L);
+
+            communityPostService.updatePost(postId, updateReq, userDetails);
+
+            assertNull(post.getDonationEvent());
+        }
+
+        @Test
+        @DisplayName("Ném lỗi khi donationEventId mới không tồn tại")
+        void updateThrowsWhenDonationEventNotFound() {
+            CommunityPostReq updateReq = new CommunityPostReq();
+            updateReq.setDonationEventId(donationEventId);
+
+            when(userDetails.getUsername()).thenReturn("org_user");
+            when(userRepository.findByUserName("org_user")).thenReturn(Optional.of(orgUser));
+            when(communityPostRepository.findById(postId)).thenReturn(Optional.of(post));
+            when(donationEventRepository.findById(donationEventId)).thenReturn(Optional.empty());
+
+            assertThrows(NotFoundException.class,
+                    () -> communityPostService.updatePost(postId, updateReq, userDetails));
+        }
+
+        @Test
+        @DisplayName("Ném lỗi khi không tìm thấy bài viết")
+        void updateThrowsWhenPostNotFound() {
+            when(userDetails.getUsername()).thenReturn("org_user");
+            when(userRepository.findByUserName("org_user")).thenReturn(Optional.of(orgUser));
+            when(communityPostRepository.findById(postId)).thenReturn(Optional.empty());
+
+            assertThrows(NotFoundException.class,
+                    () -> communityPostService.updatePost(postId, postReq, userDetails));
+        }
+
+        @Test
+        @DisplayName("Ném lỗi khi user không phải chủ bài viết")
+        void updateThrowsWhenNotOwner() {
+            when(userDetails.getUsername()).thenReturn("member_user");
+            when(userRepository.findByUserName("member_user")).thenReturn(Optional.of(memberUser));
+            when(communityPostRepository.findById(postId)).thenReturn(Optional.of(post));
+
+            assertThrows(ForbiddenException.class,
+                    () -> communityPostService.updatePost(postId, postReq, userDetails));
+            verify(communityPostRepository, never()).save(any());
+        }
+
+        @Test
+        @DisplayName("Ném lỗi khi không tìm thấy user")
+        void updateThrowsWhenUserNotFound() {
+            when(userDetails.getUsername()).thenReturn("ghost");
+            when(userRepository.findByUserName("ghost")).thenReturn(Optional.empty());
+
+            assertThrows(NotFoundException.class,
+                    () -> communityPostService.updatePost(postId, postReq, userDetails));
+        }
     }
 
-    @Test
-    void createPost_ShouldThrowForbidden_WhenUserIsNotOrganization() {
-        user.setRole(userRole);
-        when(userRepository.findByUserName("orgUser")).thenReturn(Optional.of(user));
-        assertThrows(ForbiddenException.class, () -> communityPostService.createPost(new CommunityPostReq(), userDetails));
+    // ------------------------------------------------------------------
+    // deletePost
+    // ------------------------------------------------------------------
+    @Nested
+    @DisplayName("deletePost")
+    class DeletePost {
+
+        @Test
+        @DisplayName("Xóa thành công khi là chủ bài viết")
+        void deleteSuccessAsOwner() {
+            when(userDetails.getUsername()).thenReturn("org_user");
+            when(userRepository.findByUserName("org_user")).thenReturn(Optional.of(orgUser));
+            when(communityPostRepository.findById(postId)).thenReturn(Optional.of(post));
+
+            communityPostService.deletePost(postId, userDetails);
+
+            verify(postLikeRepository).deleteAllByPost(post);
+            verify(postCommentRepository).deleteAllByPost(post);
+            verify(communityPostRepository).delete(post);
+        }
+
+        @Test
+        @DisplayName("Xóa thành công khi là ADMIN dù không phải chủ bài viết")
+        void deleteSuccessAsAdmin() {
+            when(userDetails.getUsername()).thenReturn("admin_user");
+            when(userRepository.findByUserName("admin_user")).thenReturn(Optional.of(adminUser));
+            when(communityPostRepository.findById(postId)).thenReturn(Optional.of(post));
+
+            communityPostService.deletePost(postId, userDetails);
+
+            verify(communityPostRepository).delete(post);
+        }
+
+        @Test
+        @DisplayName("Ném lỗi khi không phải chủ bài viết và không phải ADMIN")
+        void deleteThrowsWhenNotOwnerNorAdmin() {
+            when(userDetails.getUsername()).thenReturn("member_user");
+            when(userRepository.findByUserName("member_user")).thenReturn(Optional.of(memberUser));
+            when(communityPostRepository.findById(postId)).thenReturn(Optional.of(post));
+
+            assertThrows(ForbiddenException.class,
+                    () -> communityPostService.deletePost(postId, userDetails));
+            verify(communityPostRepository, never()).delete(any());
+        }
+
+        @Test
+        @DisplayName("Ném lỗi khi không tìm thấy bài viết")
+        void deleteThrowsWhenPostNotFound() {
+            when(userDetails.getUsername()).thenReturn("org_user");
+            when(userRepository.findByUserName("org_user")).thenReturn(Optional.of(orgUser));
+            when(communityPostRepository.findById(postId)).thenReturn(Optional.empty());
+
+            assertThrows(NotFoundException.class,
+                    () -> communityPostService.deletePost(postId, userDetails));
+        }
+
+        @Test
+        @DisplayName("Ném lỗi khi không tìm thấy user")
+        void deleteThrowsWhenUserNotFound() {
+            when(userDetails.getUsername()).thenReturn("ghost");
+            when(userRepository.findByUserName("ghost")).thenReturn(Optional.empty());
+
+            assertThrows(NotFoundException.class,
+                    () -> communityPostService.deletePost(postId, userDetails));
+        }
     }
 
-    @Test
-    void createPost_ShouldThrowNotFound_WhenDonationEventNotFound() {
-        CommunityPostReq req = new CommunityPostReq();
-        req.setDonationEventId(donationEventId);
-        when(userRepository.findByUserName("orgUser")).thenReturn(Optional.of(user));
-        when(donationEventRepository.findById(donationEventId)).thenReturn(Optional.empty());
+    // ------------------------------------------------------------------
+    // hidePost
+    // ------------------------------------------------------------------
+    @Nested
+    @DisplayName("hidePost")
+    class HidePost {
 
-        assertThrows(NotFoundException.class, () -> communityPostService.createPost(req, userDetails));
+        @Test
+        @DisplayName("Ẩn thành công khi là chủ bài viết")
+        void hideSuccessAsOwner() {
+            when(userDetails.getUsername()).thenReturn("org_user");
+            when(userRepository.findByUserName("org_user")).thenReturn(Optional.of(orgUser));
+            when(communityPostRepository.findById(postId)).thenReturn(Optional.of(post));
+
+            communityPostService.hidePost(postId, userDetails);
+
+            assertTrue(post.isHidden());
+            verify(communityPostRepository).save(post);
+        }
+
+        @Test
+        @DisplayName("Ẩn thành công khi là ADMIN")
+        void hideSuccessAsAdmin() {
+            when(userDetails.getUsername()).thenReturn("admin_user");
+            when(userRepository.findByUserName("admin_user")).thenReturn(Optional.of(adminUser));
+            when(communityPostRepository.findById(postId)).thenReturn(Optional.of(post));
+
+            communityPostService.hidePost(postId, userDetails);
+
+            assertTrue(post.isHidden());
+        }
+
+        @Test
+        @DisplayName("Ném lỗi khi không phải chủ bài viết và không phải ADMIN")
+        void hideThrowsWhenNotOwnerNorAdmin() {
+            when(userDetails.getUsername()).thenReturn("member_user");
+            when(userRepository.findByUserName("member_user")).thenReturn(Optional.of(memberUser));
+            when(communityPostRepository.findById(postId)).thenReturn(Optional.of(post));
+
+            assertThrows(ForbiddenException.class,
+                    () -> communityPostService.hidePost(postId, userDetails));
+            verify(communityPostRepository, never()).save(any());
+        }
+
+        @Test
+        @DisplayName("Ném lỗi khi không tìm thấy bài viết")
+        void hideThrowsWhenPostNotFound() {
+            when(userDetails.getUsername()).thenReturn("org_user");
+            when(userRepository.findByUserName("org_user")).thenReturn(Optional.of(orgUser));
+            when(communityPostRepository.findById(postId)).thenReturn(Optional.empty());
+
+            assertThrows(NotFoundException.class,
+                    () -> communityPostService.hidePost(postId, userDetails));
+        }
+
+        @Test
+        @DisplayName("Ném lỗi khi không tìm thấy user")
+        void hideThrowsWhenUserNotFound() {
+            when(userDetails.getUsername()).thenReturn("ghost");
+            when(userRepository.findByUserName("ghost")).thenReturn(Optional.empty());
+
+            assertThrows(NotFoundException.class,
+                    () -> communityPostService.hidePost(postId, userDetails));
+            verify(communityPostRepository, never()).findById(any());
+        }
     }
 
-    @Test
-    void createPost_ShouldReturnPostRes_WhenDonationEventIdNull() {
-        CommunityPostReq req = new CommunityPostReq();
-        req.setContent("New Content");
-        req.setDonationEventId(null);
+    // ------------------------------------------------------------------
+    // unhidePost
+    // ------------------------------------------------------------------
+    @Nested
+    @DisplayName("unhidePost")
+    class UnhidePost {
 
-        when(userRepository.findByUserName("orgUser")).thenReturn(Optional.of(user));
-        when(communityPostRepository.save(any(CommunityPost.class))).thenAnswer(i -> {
-            CommunityPost p = i.getArgument(0);
-            p.setId(UUID.randomUUID());
-            return p;
-        });
+        @Test
+        @DisplayName("Bỏ ẩn thành công khi là chủ bài viết")
+        void unhideSuccessAsOwner() {
+            post.setHidden(true);
+            when(userDetails.getUsername()).thenReturn("org_user");
+            when(userRepository.findByUserName("org_user")).thenReturn(Optional.of(orgUser));
+            when(communityPostRepository.findById(postId)).thenReturn(Optional.of(post));
 
-        CommunityPostRes result = communityPostService.createPost(req, userDetails);
+            communityPostService.unhidePost(postId, userDetails);
 
-        assertNotNull(result);
-        assertNull(result.getDonationEventId());
+            assertFalse(post.isHidden());
+            verify(communityPostRepository).save(post);
+        }
+
+        @Test
+        @DisplayName("Bỏ ẩn thành công khi là ADMIN")
+        void unhideSuccessAsAdmin() {
+            post.setHidden(true);
+            when(userDetails.getUsername()).thenReturn("admin_user");
+            when(userRepository.findByUserName("admin_user")).thenReturn(Optional.of(adminUser));
+            when(communityPostRepository.findById(postId)).thenReturn(Optional.of(post));
+
+            communityPostService.unhidePost(postId, userDetails);
+
+            assertFalse(post.isHidden());
+        }
+
+        @Test
+        @DisplayName("Ném lỗi khi không phải chủ bài viết và không phải ADMIN")
+        void unhideThrowsWhenNotOwnerNorAdmin() {
+            post.setHidden(true);
+            when(userDetails.getUsername()).thenReturn("member_user");
+            when(userRepository.findByUserName("member_user")).thenReturn(Optional.of(memberUser));
+            when(communityPostRepository.findById(postId)).thenReturn(Optional.of(post));
+
+            assertThrows(ForbiddenException.class,
+                    () -> communityPostService.unhidePost(postId, userDetails));
+            verify(communityPostRepository, never()).save(any());
+        }
+
+        @Test
+        @DisplayName("Ném lỗi khi không tìm thấy bài viết")
+        void unhideThrowsWhenPostNotFound() {
+            when(userDetails.getUsername()).thenReturn("org_user");
+            when(userRepository.findByUserName("org_user")).thenReturn(Optional.of(orgUser));
+            when(communityPostRepository.findById(postId)).thenReturn(Optional.empty());
+
+            assertThrows(NotFoundException.class,
+                    () -> communityPostService.unhidePost(postId, userDetails));
+        }
+
+        @Test
+        @DisplayName("Ném lỗi khi không tìm thấy user")
+        void unhideThrowsWhenUserNotFound() {
+            when(userDetails.getUsername()).thenReturn("ghost");
+            when(userRepository.findByUserName("ghost")).thenReturn(Optional.empty());
+
+            assertThrows(NotFoundException.class,
+                    () -> communityPostService.unhidePost(postId, userDetails));
+            verify(communityPostRepository, never()).findById(any());
+        }
     }
 
-    // UPDATE POST
-    @Test
-    void updatePost_ShouldUpdate_WhenUserIsAuthor() {
-        CommunityPostReq req = new CommunityPostReq();
-        req.setContent("Updated Content");
+    // ------------------------------------------------------------------
+    // getAllPosts
+    // ------------------------------------------------------------------
+    @Nested
+    @DisplayName("getAllPosts")
+    class GetAllPosts {
 
-        when(userRepository.findByUserName("orgUser")).thenReturn(Optional.of(user));
-        when(communityPostRepository.findById(postId)).thenReturn(Optional.of(post));
-        when(communityPostRepository.save(any(CommunityPost.class))).thenReturn(post);
+        @Test
+        @DisplayName("Trả về danh sách bài viết khi userDetails null (khách chưa đăng nhập)")
+        void getAllPostsWhenUserDetailsNull() {
+            when(communityPostRepository.findByIsHiddenFalseOrderByCreatedAtDesc(PageRequest.of(0, 10)))
+                    .thenReturn(new PageImpl<>(List.of(post)));
+            when(postLikeRepository.countByPost(post)).thenReturn(3L);
+            when(postCommentRepository.countByPost(post)).thenReturn(2L);
 
-        CommunityPostRes result = communityPostService.updatePost(postId, req, userDetails);
+            Page<CommunityPostRes> result = communityPostService.getAllPosts(0, 10, null);
 
-        assertNotNull(result);
-        assertNull(post.getDonationEvent());
-        verify(communityPostRepository, times(1)).save(post);
+            assertEquals(1, result.getTotalElements());
+            assertFalse(result.getContent().get(0).isLikedByMe());
+            verifyNoInteractions(userRepository);
+            verify(postLikeRepository, never()).existsByPostAndUser(any(), any());
+        }
+
+        @Test
+        @DisplayName("Trả về danh sách bài viết với isLikedByMe=true khi user đã like")
+        void getAllPostsWhenUserLikedPost() {
+            when(userDetails.getUsername()).thenReturn("member_user");
+            when(userRepository.findByUserName("member_user")).thenReturn(Optional.of(memberUser));
+            when(communityPostRepository.findByIsHiddenFalseOrderByCreatedAtDesc(PageRequest.of(0, 10)))
+                    .thenReturn(new PageImpl<>(List.of(post)));
+            when(postLikeRepository.countByPost(post)).thenReturn(3L);
+            when(postCommentRepository.countByPost(post)).thenReturn(2L);
+            when(postLikeRepository.existsByPostAndUser(post, memberUser)).thenReturn(true);
+
+            Page<CommunityPostRes> result = communityPostService.getAllPosts(0, 10, userDetails);
+
+            assertTrue(result.getContent().get(0).isLikedByMe());
+        }
+
+        @Test
+        @DisplayName("currentUser là null khi userDetails có nhưng user không tồn tại")
+        void getAllPostsWhenUserDetailsPresentButUserNotFound() {
+            when(userDetails.getUsername()).thenReturn("ghost");
+            when(userRepository.findByUserName("ghost")).thenReturn(Optional.empty());
+            when(communityPostRepository.findByIsHiddenFalseOrderByCreatedAtDesc(PageRequest.of(0, 10)))
+                    .thenReturn(new PageImpl<>(List.of(post)));
+            when(postLikeRepository.countByPost(post)).thenReturn(0L);
+            when(postCommentRepository.countByPost(post)).thenReturn(0L);
+
+            Page<CommunityPostRes> result = communityPostService.getAllPosts(0, 10, userDetails);
+
+            assertFalse(result.getContent().get(0).isLikedByMe());
+            verify(postLikeRepository, never()).existsByPostAndUser(any(), any());
+        }
     }
 
-    @Test
-    void updatePost_ShouldUpdate_WithDonationEvent() {
-        CommunityPostReq req = new CommunityPostReq();
-        req.setContent("Updated Content");
-        req.setDonationEventId(donationEventId);
+    // ------------------------------------------------------------------
+    // toggleLike
+    // ------------------------------------------------------------------
+    @Nested
+    @DisplayName("toggleLike")
+    class ToggleLike {
 
-        when(userRepository.findByUserName("orgUser")).thenReturn(Optional.of(user));
-        when(communityPostRepository.findById(postId)).thenReturn(Optional.of(post));
-        when(donationEventRepository.findById(donationEventId)).thenReturn(Optional.of(donationEvent));
-        when(communityPostRepository.save(any(CommunityPost.class))).thenReturn(post);
+        @Test
+        @DisplayName("Bỏ like khi đã like trước đó")
+        void toggleLikeRemovesExistingLike() {
+            PostLike existing = new PostLike();
+            when(userDetails.getUsername()).thenReturn("member_user");
+            when(userRepository.findByUserName("member_user")).thenReturn(Optional.of(memberUser));
+            when(communityPostRepository.findById(postId)).thenReturn(Optional.of(post));
+            when(postLikeRepository.findByPostAndUser(post, memberUser)).thenReturn(Optional.of(existing));
 
-        CommunityPostRes result = communityPostService.updatePost(postId, req, userDetails);
+            communityPostService.toggleLike(postId, userDetails);
 
-        assertNotNull(result);
-        assertEquals(donationEvent, post.getDonationEvent());
-        verify(communityPostRepository, times(1)).save(post);
+            verify(postLikeRepository).delete(existing);
+            verify(postLikeRepository, never()).save(any());
+            verifyNoInteractions(eventPublisher);
+        }
+
+        @Test
+        @DisplayName("Thêm like mới và gửi thông báo khi người like khác tác giả")
+        void toggleLikeAddsNewLikeAndNotifiesDifferentAuthor() {
+            when(userDetails.getUsername()).thenReturn("member_user");
+            when(userRepository.findByUserName("member_user")).thenReturn(Optional.of(memberUser));
+            when(communityPostRepository.findById(postId)).thenReturn(Optional.of(post));
+            when(postLikeRepository.findByPostAndUser(post, memberUser)).thenReturn(Optional.empty());
+
+            communityPostService.toggleLike(postId, userDetails);
+
+            verify(postLikeRepository).save(any(PostLike.class));
+            verify(eventPublisher).publishEvent(any(PostInteractionNotificationEvent.class));
+        }
+
+        @Test
+        @DisplayName("Thêm like mới nhưng không gửi thông báo khi tự like bài của mình")
+        void toggleLikeAddsNewLikeButNoNotificationWhenSelfLike() {
+            when(userDetails.getUsername()).thenReturn("org_user");
+            when(userRepository.findByUserName("org_user")).thenReturn(Optional.of(orgUser));
+            when(communityPostRepository.findById(postId)).thenReturn(Optional.of(post));
+            when(postLikeRepository.findByPostAndUser(post, orgUser)).thenReturn(Optional.empty());
+
+            communityPostService.toggleLike(postId, userDetails);
+
+            verify(postLikeRepository).save(any(PostLike.class));
+            verifyNoInteractions(eventPublisher);
+        }
+
+        @Test
+        @DisplayName("Ném lỗi khi không tìm thấy bài viết")
+        void toggleLikeThrowsWhenPostNotFound() {
+            when(userDetails.getUsername()).thenReturn("member_user");
+            when(userRepository.findByUserName("member_user")).thenReturn(Optional.of(memberUser));
+            when(communityPostRepository.findById(postId)).thenReturn(Optional.empty());
+
+            assertThrows(NotFoundException.class,
+                    () -> communityPostService.toggleLike(postId, userDetails));
+        }
+
+        @Test
+        @DisplayName("Ném lỗi khi không tìm thấy user")
+        void toggleLikeThrowsWhenUserNotFound() {
+            when(userDetails.getUsername()).thenReturn("ghost");
+            when(userRepository.findByUserName("ghost")).thenReturn(Optional.empty());
+
+            assertThrows(NotFoundException.class,
+                    () -> communityPostService.toggleLike(postId, userDetails));
+        }
     }
 
-    @Test
-    void updatePost_ShouldThrowNotFound_WhenUserNotFound() {
-        when(userRepository.findByUserName("orgUser")).thenReturn(Optional.empty());
-        assertThrows(NotFoundException.class, () -> communityPostService.updatePost(postId, new CommunityPostReq(), userDetails));
+    // ------------------------------------------------------------------
+    // addComment
+    // ------------------------------------------------------------------
+    @Nested
+    @DisplayName("addComment")
+    class AddComment {
+
+        private PostCommentReq commentReq;
+
+        @BeforeEach
+        void setUpComment() {
+            commentReq = new PostCommentReq();
+            commentReq.setContent("Nice post!");
+        }
+
+        @Test
+        @DisplayName("Bình luận cấp cao nhất, tác giả khác -> gửi 1 thông báo cho tác giả bài viết")
+        void addTopLevelCommentNotifiesPostAuthor() {
+            when(userDetails.getUsername()).thenReturn("member_user");
+            when(userRepository.findByUserName("member_user")).thenReturn(Optional.of(memberUser));
+            when(communityPostRepository.findById(postId)).thenReturn(Optional.of(post));
+            when(postCommentRepository.save(any(PostComment.class))).thenAnswer(inv -> inv.getArgument(0));
+
+            PostCommentRes result = communityPostService.addComment(postId, commentReq, userDetails);
+
+            assertNotNull(result);
+            verify(eventPublisher, times(1)).publishEvent(any(PostInteractionNotificationEvent.class));
+        }
+
+        @Test
+        @DisplayName("Bình luận cấp cao nhất, tự bình luận bài của mình -> không gửi thông báo")
+        void addTopLevelCommentNoNotificationWhenSelfComment() {
+            when(userDetails.getUsername()).thenReturn("org_user");
+            when(userRepository.findByUserName("org_user")).thenReturn(Optional.of(orgUser));
+            when(communityPostRepository.findById(postId)).thenReturn(Optional.of(post));
+            when(postCommentRepository.save(any(PostComment.class))).thenAnswer(inv -> inv.getArgument(0));
+
+            communityPostService.addComment(postId, commentReq, userDetails);
+
+            verifyNoInteractions(eventPublisher);
+        }
+
+        @Test
+        @DisplayName("Trả lời bình luận, tác giả bài viết và tác giả bình luận cha đều khác -> gửi 2 thông báo")
+        void addReplyNotifiesBothPostAuthorAndParentCommentAuthor() {
+            UUID parentCommentId = UUID.randomUUID();
+            User parentCommentAuthor = new User();
+            parentCommentAuthor.setUserId(UUID.randomUUID());
+            parentCommentAuthor.setFullName("Parent Author");
+
+            PostComment parentComment = new PostComment();
+            parentComment.setId(parentCommentId);
+            parentComment.setUser(parentCommentAuthor);
+
+            commentReq.setParentCommentId(parentCommentId);
+
+            when(userDetails.getUsername()).thenReturn("member_user");
+            when(userRepository.findByUserName("member_user")).thenReturn(Optional.of(memberUser));
+            when(communityPostRepository.findById(postId)).thenReturn(Optional.of(post));
+            when(postCommentRepository.findById(parentCommentId)).thenReturn(Optional.of(parentComment));
+            when(postCommentRepository.save(any(PostComment.class))).thenAnswer(inv -> inv.getArgument(0));
+
+            communityPostService.addComment(postId, commentReq, userDetails);
+
+            verify(eventPublisher, times(2)).publishEvent(any(PostInteractionNotificationEvent.class));
+        }
+
+        @Test
+        @DisplayName("Trả lời bình luận của chính mình trên bài người khác -> chỉ gửi 1 thông báo cho tác giả bài viết")
+        void addReplyOnlyNotifiesPostAuthorWhenReplyingToOwnComment() {
+            UUID parentCommentId = UUID.randomUUID();
+            PostComment parentComment = new PostComment();
+            parentComment.setId(parentCommentId);
+            parentComment.setUser(memberUser); // tác giả comment cha == người đang bình luận
+
+            commentReq.setParentCommentId(parentCommentId);
+
+            when(userDetails.getUsername()).thenReturn("member_user");
+            when(userRepository.findByUserName("member_user")).thenReturn(Optional.of(memberUser));
+            when(communityPostRepository.findById(postId)).thenReturn(Optional.of(post));
+            when(postCommentRepository.findById(parentCommentId)).thenReturn(Optional.of(parentComment));
+            when(postCommentRepository.save(any(PostComment.class))).thenAnswer(inv -> inv.getArgument(0));
+
+            communityPostService.addComment(postId, commentReq, userDetails);
+
+            verify(eventPublisher, times(1)).publishEvent(any(PostInteractionNotificationEvent.class));
+        }
+
+        @Test
+        @DisplayName("Trả lời bình luận trên bài viết của chính mình -> chỉ gửi 1 thông báo cho tác giả bình luận cha")
+        void addReplyOnlyNotifiesParentAuthorWhenPostIsOwnedBySelf() {
+            UUID parentCommentId = UUID.randomUUID();
+            User parentCommentAuthor = new User();
+            parentCommentAuthor.setUserId(UUID.randomUUID());
+            parentCommentAuthor.setFullName("Parent Author");
+
+            PostComment parentComment = new PostComment();
+            parentComment.setId(parentCommentId);
+            parentComment.setUser(parentCommentAuthor);
+
+            commentReq.setParentCommentId(parentCommentId);
+
+            // org_user là tác giả của post, và cũng là người bình luận (trả lời)
+            when(userDetails.getUsername()).thenReturn("org_user");
+            when(userRepository.findByUserName("org_user")).thenReturn(Optional.of(orgUser));
+            when(communityPostRepository.findById(postId)).thenReturn(Optional.of(post));
+            when(postCommentRepository.findById(parentCommentId)).thenReturn(Optional.of(parentComment));
+            when(postCommentRepository.save(any(PostComment.class))).thenAnswer(inv -> inv.getArgument(0));
+
+            communityPostService.addComment(postId, commentReq, userDetails);
+
+            verify(eventPublisher, times(1)).publishEvent(any(PostInteractionNotificationEvent.class));
+        }
+
+        @Test
+        @DisplayName("Ném lỗi khi parentCommentId không tồn tại")
+        void addCommentThrowsWhenParentCommentNotFound() {
+            UUID parentCommentId = UUID.randomUUID();
+            commentReq.setParentCommentId(parentCommentId);
+
+            when(userDetails.getUsername()).thenReturn("member_user");
+            when(userRepository.findByUserName("member_user")).thenReturn(Optional.of(memberUser));
+            when(communityPostRepository.findById(postId)).thenReturn(Optional.of(post));
+            when(postCommentRepository.findById(parentCommentId)).thenReturn(Optional.empty());
+
+            assertThrows(NotFoundException.class,
+                    () -> communityPostService.addComment(postId, commentReq, userDetails));
+            verify(postCommentRepository, never()).save(any());
+        }
+
+        @Test
+        @DisplayName("Ném lỗi khi không tìm thấy bài viết")
+        void addCommentThrowsWhenPostNotFound() {
+            when(userDetails.getUsername()).thenReturn("member_user");
+            when(userRepository.findByUserName("member_user")).thenReturn(Optional.of(memberUser));
+            when(communityPostRepository.findById(postId)).thenReturn(Optional.empty());
+
+            assertThrows(NotFoundException.class,
+                    () -> communityPostService.addComment(postId, commentReq, userDetails));
+        }
+
+        @Test
+        @DisplayName("Ném lỗi khi không tìm thấy user")
+        void addCommentThrowsWhenUserNotFound() {
+            when(userDetails.getUsername()).thenReturn("ghost");
+            when(userRepository.findByUserName("ghost")).thenReturn(Optional.empty());
+
+            assertThrows(NotFoundException.class,
+                    () -> communityPostService.addComment(postId, commentReq, userDetails));
+        }
     }
 
-    @Test
-    void updatePost_ShouldThrowNotFound_WhenPostNotFound() {
-        when(userRepository.findByUserName("orgUser")).thenReturn(Optional.of(user));
-        when(communityPostRepository.findById(postId)).thenReturn(Optional.empty());
-        assertThrows(NotFoundException.class, () -> communityPostService.updatePost(postId, new CommunityPostReq(), userDetails));
-    }
-
-    @Test
-    void updatePost_ShouldThrowForbidden_WhenNotAuthor() {
-        User otherUser = new User();
-        otherUser.setUserId(UUID.randomUUID());
-        otherUser.setUserName("otherUser");
-        when(userDetails.getUsername()).thenReturn("otherUser");
-        when(userRepository.findByUserName("otherUser")).thenReturn(Optional.of(otherUser));
-        when(communityPostRepository.findById(postId)).thenReturn(Optional.of(post));
-
-        assertThrows(ForbiddenException.class, () -> communityPostService.updatePost(postId, new CommunityPostReq(), userDetails));
-    }
-
-    @Test
-    void updatePost_ShouldThrowNotFound_WhenDonationEventNotFound() {
-        CommunityPostReq req = new CommunityPostReq();
-        req.setDonationEventId(donationEventId);
-        when(userRepository.findByUserName("orgUser")).thenReturn(Optional.of(user));
-        when(communityPostRepository.findById(postId)).thenReturn(Optional.of(post));
-        when(donationEventRepository.findById(donationEventId)).thenReturn(Optional.empty());
-
-        assertThrows(NotFoundException.class, () -> communityPostService.updatePost(postId, req, userDetails));
-    }
-
-    // DELETE POST
-    @Test
-    void deletePost_ShouldDelete_WhenUserIsAuthor() {
-        when(userRepository.findByUserName("orgUser")).thenReturn(Optional.of(user));
-        when(communityPostRepository.findById(postId)).thenReturn(Optional.of(post));
-
-        communityPostService.deletePost(postId, userDetails);
-
-        verify(postLikeRepository, times(1)).deleteAllByPost(post);
-        verify(postCommentRepository, times(1)).deleteAllByPost(post);
-        verify(communityPostRepository, times(1)).delete(post);
-    }
-
-    @Test
-    void deletePost_ShouldDelete_WhenAdmin() {
-        when(userDetails.getUsername()).thenReturn("admin");
-        when(userRepository.findByUserName("admin")).thenReturn(Optional.of(adminUser));
-        when(communityPostRepository.findById(postId)).thenReturn(Optional.of(post));
-
-        communityPostService.deletePost(postId, userDetails);
-
-        verify(communityPostRepository, times(1)).delete(post);
-    }
-
-    @Test
-    void deletePost_ShouldThrowNotFound_WhenUserNotFound() {
-        when(userRepository.findByUserName("orgUser")).thenReturn(Optional.empty());
-        assertThrows(NotFoundException.class, () -> communityPostService.deletePost(postId, userDetails));
-    }
-
-    @Test
-    void deletePost_ShouldThrowNotFound_WhenPostNotFound() {
-        when(userRepository.findByUserName("orgUser")).thenReturn(Optional.of(user));
-        when(communityPostRepository.findById(postId)).thenReturn(Optional.empty());
-        assertThrows(NotFoundException.class, () -> communityPostService.deletePost(postId, userDetails));
-    }
-
-    @Test
-    void deletePost_ShouldThrowForbidden_WhenNotAuthorAndNotAdmin() {
-        User otherUser = new User();
-        otherUser.setUserId(UUID.randomUUID());
-        otherUser.setRole(userRole);
-        otherUser.setUserName("otherUser");
-
-        when(userDetails.getUsername()).thenReturn("otherUser");
-        when(userRepository.findByUserName("otherUser")).thenReturn(Optional.of(otherUser));
-        when(communityPostRepository.findById(postId)).thenReturn(Optional.of(post));
-
-        assertThrows(ForbiddenException.class, () -> communityPostService.deletePost(postId, userDetails));
-    }
-
-    // HIDE POST
-    @Test
-    void hidePost_ShouldHide_WhenAuthor() {
-        when(userRepository.findByUserName("orgUser")).thenReturn(Optional.of(user));
-        when(communityPostRepository.findById(postId)).thenReturn(Optional.of(post));
-
-        communityPostService.hidePost(postId, userDetails);
-        assertTrue(post.isHidden());
-        verify(communityPostRepository, times(1)).save(post);
-    }
-
-    @Test
-    void hidePost_ShouldHide_WhenAdmin() {
-        when(userDetails.getUsername()).thenReturn("admin");
-        when(userRepository.findByUserName("admin")).thenReturn(Optional.of(adminUser));
-        when(communityPostRepository.findById(postId)).thenReturn(Optional.of(post));
-
-        communityPostService.hidePost(postId, userDetails);
-        assertTrue(post.isHidden());
-    }
-
-    @Test
-    void hidePost_ShouldThrowForbidden_WhenNotAuthorAndNotAdmin() {
-        User otherUser = new User();
-        otherUser.setUserId(UUID.randomUUID());
-        otherUser.setRole(userRole);
-        otherUser.setUserName("otherUser");
-        when(userDetails.getUsername()).thenReturn("otherUser");
-        when(userRepository.findByUserName("otherUser")).thenReturn(Optional.of(otherUser));
-        when(communityPostRepository.findById(postId)).thenReturn(Optional.of(post));
-
-        assertThrows(ForbiddenException.class, () -> communityPostService.hidePost(postId, userDetails));
-    }
-
-    @Test
-    void hidePost_ShouldThrowNotFound_WhenPostNotFound() {
-        when(userRepository.findByUserName("orgUser")).thenReturn(Optional.of(user));
-        when(communityPostRepository.findById(postId)).thenReturn(Optional.empty());
-        assertThrows(NotFoundException.class, () -> communityPostService.hidePost(postId, userDetails));
-    }
-
-    @Test
-    void hidePost_ShouldThrowNotFound_WhenUserNotFound() {
-        when(userRepository.findByUserName("orgUser")).thenReturn(Optional.empty());
-        assertThrows(NotFoundException.class, () -> communityPostService.hidePost(postId, userDetails));
-    }
-
-    // UNHIDE POST
-    @Test
-    void unhidePost_ShouldUnhide_WhenAuthor() {
-        post.setHidden(true);
-        when(userRepository.findByUserName("orgUser")).thenReturn(Optional.of(user));
-        when(communityPostRepository.findById(postId)).thenReturn(Optional.of(post));
-
-        communityPostService.unhidePost(postId, userDetails);
-        assertFalse(post.isHidden());
-        verify(communityPostRepository, times(1)).save(post);
-    }
-
-    @Test
-    void unhidePost_ShouldUnhide_WhenAdmin() {
-        post.setHidden(true);
-        when(userDetails.getUsername()).thenReturn("admin");
-        when(userRepository.findByUserName("admin")).thenReturn(Optional.of(adminUser));
-        when(communityPostRepository.findById(postId)).thenReturn(Optional.of(post));
-
-        communityPostService.unhidePost(postId, userDetails);
-        assertFalse(post.isHidden());
-    }
-
-    @Test
-    void unhidePost_ShouldThrowForbidden_WhenNotAuthorAndNotAdmin() {
-        User otherUser = new User();
-        otherUser.setUserId(UUID.randomUUID());
-        otherUser.setRole(userRole);
-        otherUser.setUserName("otherUser");
-        when(userDetails.getUsername()).thenReturn("otherUser");
-        when(userRepository.findByUserName("otherUser")).thenReturn(Optional.of(otherUser));
-        when(communityPostRepository.findById(postId)).thenReturn(Optional.of(post));
-
-        assertThrows(ForbiddenException.class, () -> communityPostService.unhidePost(postId, userDetails));
-    }
-
-    @Test
-    void unhidePost_ShouldThrowNotFound_WhenPostNotFound() {
-        when(userRepository.findByUserName("orgUser")).thenReturn(Optional.of(user));
-        when(communityPostRepository.findById(postId)).thenReturn(Optional.empty());
-        assertThrows(NotFoundException.class, () -> communityPostService.unhidePost(postId, userDetails));
-    }
-
-    @Test
-    void unhidePost_ShouldThrowNotFound_WhenUserNotFound() {
-        when(userRepository.findByUserName("orgUser")).thenReturn(Optional.empty());
-        assertThrows(NotFoundException.class, () -> communityPostService.unhidePost(postId, userDetails));
-    }
-
-    // GET ALL POSTS
-    @Test
-    void getAllPosts_ShouldReturnPageOfPosts() {
-        Page<CommunityPost> page = new PageImpl<>(Collections.singletonList(post));
-        when(communityPostRepository.findByIsHiddenFalseOrderByCreatedAtDesc(any(PageRequest.class))).thenReturn(page);
-        when(userRepository.findByUserName("orgUser")).thenReturn(Optional.of(user));
-
-        Page<CommunityPostRes> result = communityPostService.getAllPosts(0, 10, userDetails);
-
-        assertNotNull(result);
-        assertEquals(1, result.getTotalElements());
-    }
-
-    @Test
-    void getAllPosts_ShouldHandleNullUserDetails() {
-        Page<CommunityPost> page = new PageImpl<>(Collections.singletonList(post));
-        when(communityPostRepository.findByIsHiddenFalseOrderByCreatedAtDesc(any(PageRequest.class))).thenReturn(page);
-
-        Page<CommunityPostRes> result = communityPostService.getAllPosts(0, 10, null);
-
-        assertNotNull(result);
-        assertEquals(1, result.getTotalElements());
-        assertFalse(result.getContent().get(0).isLikedByMe());
-    }
-
-    @Test
-    void getAllPosts_ShouldHandleUserNotFound() {
-        Page<CommunityPost> page = new PageImpl<>(Collections.singletonList(post));
-        when(communityPostRepository.findByIsHiddenFalseOrderByCreatedAtDesc(any(PageRequest.class))).thenReturn(page);
-        when(userRepository.findByUserName("orgUser")).thenReturn(Optional.empty());
-
-        Page<CommunityPostRes> result = communityPostService.getAllPosts(0, 10, userDetails);
-
-        assertNotNull(result);
-        assertEquals(1, result.getTotalElements());
-    }
-
-    // TOGGLE LIKE
-    @Test
-    void toggleLike_ShouldAddLike_WhenNotLiked() {
-        when(userRepository.findByUserName("orgUser")).thenReturn(Optional.of(user));
-        when(communityPostRepository.findById(postId)).thenReturn(Optional.of(post));
-        when(postLikeRepository.findByPostAndUser(post, user)).thenReturn(Optional.empty());
-
-        communityPostService.toggleLike(postId, userDetails);
-
-        verify(postLikeRepository, times(1)).save(any(PostLike.class));
-    }
-
-    @Test
-    void toggleLike_ShouldAddLikeAndNotify_WhenNotLikedByOtherUser() {
-        User otherUser = new User();
-        otherUser.setUserId(UUID.randomUUID());
-        otherUser.setUserName("otherUser");
-        when(userDetails.getUsername()).thenReturn("otherUser");
-        when(userRepository.findByUserName("otherUser")).thenReturn(Optional.of(otherUser));
-        when(communityPostRepository.findById(postId)).thenReturn(Optional.of(post));
-        when(postLikeRepository.findByPostAndUser(post, otherUser)).thenReturn(Optional.empty());
-
-        communityPostService.toggleLike(postId, userDetails);
-
-        verify(postLikeRepository, times(1)).save(any(PostLike.class));
-        verify(eventPublisher, times(1)).publishEvent(any(PostInteractionNotificationEvent.class));
-    }
-
-    @Test
-    void toggleLike_ShouldRemoveLike_WhenAlreadyLiked() {
-        PostLike like = new PostLike();
-        when(userRepository.findByUserName("orgUser")).thenReturn(Optional.of(user));
-        when(communityPostRepository.findById(postId)).thenReturn(Optional.of(post));
-        when(postLikeRepository.findByPostAndUser(post, user)).thenReturn(Optional.of(like));
-
-        communityPostService.toggleLike(postId, userDetails);
-
-        verify(postLikeRepository, times(1)).delete(like);
-    }
-
-    @Test
-    void toggleLike_ShouldThrowNotFound_WhenUserNotFound() {
-        when(userRepository.findByUserName("orgUser")).thenReturn(Optional.empty());
-        assertThrows(NotFoundException.class, () -> communityPostService.toggleLike(postId, userDetails));
-    }
-
-    @Test
-    void toggleLike_ShouldThrowNotFound_WhenPostNotFound() {
-        when(userRepository.findByUserName("orgUser")).thenReturn(Optional.of(user));
-        when(communityPostRepository.findById(postId)).thenReturn(Optional.empty());
-        assertThrows(NotFoundException.class, () -> communityPostService.toggleLike(postId, userDetails));
-    }
-
-    // ADD COMMENT
-    @Test
-    void addComment_ShouldSaveComment_WhenReplyToSameAuthor() {
-        PostCommentReq req = new PostCommentReq();
-        req.setContent("Nice post!");
-
-        when(userRepository.findByUserName("orgUser")).thenReturn(Optional.of(user));
-        when(communityPostRepository.findById(postId)).thenReturn(Optional.of(post));
-        
-        PostComment savedComment = new PostComment();
-        savedComment.setId(UUID.randomUUID());
-        savedComment.setPost(post);
-        savedComment.setUser(user);
-        savedComment.setContent("Nice post!");
-        when(postCommentRepository.save(any(PostComment.class))).thenReturn(savedComment);
-
-        PostCommentRes res = communityPostService.addComment(postId, req, userDetails);
-
-        assertNotNull(res);
-        verify(eventPublisher, never()).publishEvent(any()); // User commented on own post
-    }
-
-    @Test
-    void addComment_ShouldSaveCommentAndNotify_WhenOtherUserComments() {
-        User commenter = new User();
-        commenter.setUserId(UUID.randomUUID());
-        commenter.setUserName("commenter");
-        commenter.setFullName("Commenter Name");
-
-        PostCommentReq req = new PostCommentReq();
-        req.setContent("Nice post!");
-
-        PostComment savedComment = new PostComment();
-        savedComment.setId(UUID.randomUUID());
-        savedComment.setPost(post);
-        savedComment.setUser(commenter);
-        savedComment.setContent("Nice post!");
-
-        when(userDetails.getUsername()).thenReturn("commenter");
-        when(userRepository.findByUserName("commenter")).thenReturn(Optional.of(commenter));
-        when(communityPostRepository.findById(postId)).thenReturn(Optional.of(post));
-        when(postCommentRepository.save(any(PostComment.class))).thenReturn(savedComment);
-
-        PostCommentRes res = communityPostService.addComment(postId, req, userDetails);
-
-        assertNotNull(res);
-        verify(eventPublisher, times(1)).publishEvent(any(PostInteractionNotificationEvent.class));
-    }
-
-    @Test
-    void addComment_ShouldSaveCommentAndNotify_WhenReplyToParent() {
-        User commenter = new User();
-        commenter.setUserId(UUID.randomUUID());
-        commenter.setUserName("commenter");
-        commenter.setFullName("Commenter Name");
-
-        User parentUser = new User();
-        parentUser.setUserId(UUID.randomUUID());
-        parentUser.setUserName("parentUser");
-
-        PostComment parent = new PostComment();
-        parent.setId(UUID.randomUUID());
-        parent.setUser(parentUser);
-
-        PostCommentReq req = new PostCommentReq();
-        req.setContent("Reply!");
-        req.setParentCommentId(parent.getId());
-
-        PostComment savedComment = new PostComment();
-        savedComment.setId(UUID.randomUUID());
-        savedComment.setPost(post);
-        savedComment.setUser(commenter);
-        savedComment.setContent("Reply!");
-        savedComment.setParentComment(parent);
-
-        when(userDetails.getUsername()).thenReturn("commenter");
-        when(userRepository.findByUserName("commenter")).thenReturn(Optional.of(commenter));
-        when(communityPostRepository.findById(postId)).thenReturn(Optional.of(post));
-        when(postCommentRepository.findById(parent.getId())).thenReturn(Optional.of(parent));
-        when(postCommentRepository.save(any(PostComment.class))).thenReturn(savedComment);
-
-        communityPostService.addComment(postId, req, userDetails);
-
-        verify(eventPublisher, times(2)).publishEvent(any(PostInteractionNotificationEvent.class)); // 1 for post author, 1 for parent comment author
-    }
-
-    @Test
-    void addComment_ShouldThrowNotFound_WhenUserNotFound() {
-        when(userRepository.findByUserName("orgUser")).thenReturn(Optional.empty());
-        assertThrows(NotFoundException.class, () -> communityPostService.addComment(postId, new PostCommentReq(), userDetails));
-    }
-
-    @Test
-    void addComment_ShouldThrowNotFound_WhenPostNotFound() {
-        when(userRepository.findByUserName("orgUser")).thenReturn(Optional.of(user));
-        when(communityPostRepository.findById(postId)).thenReturn(Optional.empty());
-        assertThrows(NotFoundException.class, () -> communityPostService.addComment(postId, new PostCommentReq(), userDetails));
-    }
-
-    @Test
-    void addComment_ShouldThrowNotFound_WhenParentCommentNotFound() {
-        PostCommentReq req = new PostCommentReq();
-        req.setParentCommentId(UUID.randomUUID());
-        when(userRepository.findByUserName("orgUser")).thenReturn(Optional.of(user));
-        when(communityPostRepository.findById(postId)).thenReturn(Optional.of(post));
-        when(postCommentRepository.findById(req.getParentCommentId())).thenReturn(Optional.empty());
-
-        assertThrows(NotFoundException.class, () -> communityPostService.addComment(postId, req, userDetails));
-    }
-
-    @Test
-    void addComment_ShouldSaveComment_WhenReplyToSameAuthorAndSamePostAuthor() {
-        PostCommentReq req = new PostCommentReq();
-        req.setContent("Nice post!");
-        
-        PostComment parent = new PostComment();
-        parent.setId(UUID.randomUUID());
-        parent.setUser(user); 
-        req.setParentCommentId(parent.getId());
-
-        when(userRepository.findByUserName("orgUser")).thenReturn(Optional.of(user));
-        when(communityPostRepository.findById(postId)).thenReturn(Optional.of(post));
-        when(postCommentRepository.findById(parent.getId())).thenReturn(Optional.of(parent));
-        
-        PostComment savedComment = new PostComment();
-        savedComment.setId(UUID.randomUUID());
-        savedComment.setPost(post);
-        savedComment.setUser(user);
-        savedComment.setContent("Nice post!");
-        savedComment.setParentComment(parent);
-        
-        when(postCommentRepository.save(any(PostComment.class))).thenReturn(savedComment);
-
-        communityPostService.addComment(postId, req, userDetails);
-
-        verify(eventPublisher, never()).publishEvent(any()); 
-    }
-
-    // GET COMMENTS
-    @Test
-    void getComments_ShouldReturnPageOfComments() {
-        PostComment comment = new PostComment();
-        comment.setId(UUID.randomUUID());
-        comment.setUser(user);
-        Page<PostComment> page = new PageImpl<>(Collections.singletonList(comment));
-        
-        when(communityPostRepository.findById(postId)).thenReturn(Optional.of(post));
-        when(postCommentRepository.findByPostOrderByCreatedAtAsc(eq(post), any(PageRequest.class))).thenReturn(page);
-
-        Page<PostCommentRes> result = communityPostService.getComments(postId, 0, 10);
-
-        assertNotNull(result);
-        assertEquals(1, result.getTotalElements());
-    }
-
-    @Test
-    void getComments_ShouldThrowNotFound_WhenPostNotFound() {
-        when(communityPostRepository.findById(postId)).thenReturn(Optional.empty());
-        assertThrows(NotFoundException.class, () -> communityPostService.getComments(postId, 0, 10));
+    // ------------------------------------------------------------------
+    // getComments
+    // ------------------------------------------------------------------
+    @Nested
+    @DisplayName("getComments")
+    class GetComments {
+
+        @Test
+        @DisplayName("Trả về danh sách bình luận thành công")
+        void getCommentsSuccess() {
+            PostComment comment = new PostComment();
+            comment.setId(UUID.randomUUID());
+            comment.setContent("A comment");
+            comment.setUser(memberUser);
+
+            when(communityPostRepository.findById(postId)).thenReturn(Optional.of(post));
+            when(postCommentRepository.findByPostOrderByCreatedAtAsc(post, PageRequest.of(0, 10)))
+                    .thenReturn(new PageImpl<>(List.of(comment)));
+
+            Page<PostCommentRes> result = communityPostService.getComments(postId, 0, 10);
+
+            assertEquals(1, result.getTotalElements());
+            assertEquals("A comment", result.getContent().get(0).getContent());
+        }
+
+        @Test
+        @DisplayName("Ném lỗi khi không tìm thấy bài viết")
+        void getCommentsThrowsWhenPostNotFound() {
+            when(communityPostRepository.findById(postId)).thenReturn(Optional.empty());
+
+            assertThrows(NotFoundException.class,
+                    () -> communityPostService.getComments(postId, 0, 10));
+        }
     }
 }
